--- a/ci/tasks/hello-world.yml
+++ b/ci/tasks/hello-world.yml
@@ -1,10 +1,10 @@
 platform: linux
 
-image-resource:
+image_resource:
   type: docker-image
-    source: {repository: busybox}
+  source: {repository: busybox}
 
-  run:
-    path: ls
-    args: [-la]
+run:
+  path: echo
+  args: [hello world]
 
