trigger changes for the pipeline

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -10,5 +10,6 @@ jobs:
     public: true
     plan:
       - get: university-resource
+        - trigger: true
       - task: list-files
         file: university-resource/ci/tasks/hello-world.yml
