added the run tests .sh file

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -13,3 +13,5 @@ jobs:
         trigger: true
       - task: list-files
         file: university-resource/ci/tasks/hello-world.yml
+      - task: run-tests
+        file: university-resource/ci/scripts/run-tests.sh
