--- a/ci/tasks/hello-world.yml
+++ b/ci/tasks/hello-world.yml
@@ -2,7 +2,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
+  source: {repository: java, tag: openjdk-8-alpine}
 
 
 inputs:
