made changes to the tasks

--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -8,4 +8,4 @@ inputs:
   - name: university-resource
 
 run:
-  path: ci/scripts/run-tests.sh
+  path: university-resource/ci-hello/scripts/run-tests.sh
