--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -21,3 +21,5 @@ jobs:
     plan:
       - get: university-resource
         trigger: true
+      - task: run-tests
+        file: university-resource/ci/tasks/run-tests.yml
