--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -2,7 +2,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: java, tag: openjdk:8-jre-alpine }
+  source: {repository: openjdk:8-jre-alpine}
 
 inputs:
   - name: university-resource
