--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -2,14 +2,14 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: openjdk:8-jre-alpine}
+  source: {repository: openjdk}
 
 inputs:
   - name: university-resource
 
 
 run:
-  path: /bin/bash
+  path: /bin/sh
   args:
     - -c
       - |
