added the reference to the .sh file

--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -9,11 +9,5 @@ image_resource:
 inputs:
   - name: university-resource
 
-
 run:
-  path: ls
-  args: [-la]
-
-
-#run:
-#  path: university-resource/ci/scripts/run-tests.sh
+  path: university-resource/ci/scripts/run-tests.sh
