--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -3,8 +3,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: openjdk
-    tag: 8-jre-alpine
+    repository: zenika/alpine-maven
+    tag: 3-jdk8
 
 inputs:
   - name: university-resource
