--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -6,13 +6,13 @@ resources:
       branch: master
 
 jobs:
-  - name: job-hello-world
+  - name: build
     public: true
     plan:
       - get: university-resource
         trigger: true
       - task: list-files
-        file: university-resource/ci/tasks/hello-world.yml
+        file: university-resource/ci/tasks/build.yml
       - task: run-tests
         file: university-resource/ci/tasks/run-tests.yml
 
@@ -21,5 +21,6 @@ jobs:
     plan:
       - get: university-resource
         trigger: true
+        passed: [job-hello-world]
       - task: run-tests
         file: university-resource/ci/tasks/run-tests.yml
