--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/university_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Gives us access to the H2 database web console
+spring.h2.console.enabled=true
+# Generates the database *only* if it's not there yet
+spring.jpa.hibernate.ddl-auto=update
