--- a/ci/tasks/build.yml
+++ b/ci/tasks/build.yml
@@ -2,7 +2,9 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
+  source:
+    repository: zenika/alpine-maven
+    tag: 3-jdk8
 
 inputs:
   - name: university-resource
