Added the list of input resources.

--- a/ci/tasks/publish.yml
+++ b/ci/tasks/publish.yml
@@ -6,7 +6,8 @@ image_resource:
     repository: ubuntu
 
 inputs:
-  name: built-university-resource
+  - name: university-resource
+  - name: built-university-resource
 
 run:
   path: university-resource/ci/scripts/publish-image.sh
