--- a/ci/tasks/publish.yml
+++ b/ci/tasks/publish.yml
@@ -7,7 +7,7 @@ image_resource:
 
 inputs:
   - name: university-resource
-  - name: built-university-resource
+#  - name: built-university-resource
 
 run:
   path: university-resource/ci/scripts/publish-image.sh
