Made changes so that the publish job is directly related to the changes to the repo.

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
     plan:
       - get: university-resource
         trigger: true
-        passed: [build]
+#        passed: [build]
       - task: publish-image
         file: university-resource/ci/tasks/publish.yml
 
