--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -21,13 +21,12 @@ jobs:
       - task: build-project
         file: university-resource/ci/tasks/build.yml
 
-
   - name: publish
     public: true
     plan:
       - get: university-resource
         trigger: true
-#        passed: [build]
+        passed: [build]
       - task: publish-image
         file: university-resource/ci/tasks/publish.yml
 
