--- a/ci/tasks/publish.yml
+++ b/ci/tasks/publish.yml
@@ -3,7 +3,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: ubuntu
+    repository: zenika/alpine-maven
+    tag: 3-jdk8
 
 inputs:
   - name: university-resource
