Changed files so that the e2e tests can run on the ci server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   university-app:
     build:
       context: .
-    image: university-app:1.0
+    image: dockerdozens/university-app:latest
     ports:
       - "8888:8888"
     container_name: universityapp
