Changed files to run docker in docker.

--- a/pom.xml
+++ b/pom.xml
@@ -124,15 +124,18 @@
                         <artifactId>docker-maven-plugin</artifactId>
                         <version>0.27.2</version>
                         <configuration>
-                            <autoCreateCustomNetworks>true</autoCreateCustomNetworks>
-                            <machine>
-                                <name>maven</name>
-                                <autoCreate>true</autoCreate>
-                                <createOptions>
-                                    <driver>virtualbox</driver>
-                                    <virtualbox-cpu-count>2</virtualbox-cpu-count>
-                                </createOptions>
-                            </machine>
+<!--                            <autoCreateCustomNetworks>true</autoCreateCustomNetworks>-->
+<!--                            <machine>-->
+<!--                                <name>foo</name>-->
+<!--                                <autoCreate>true</autoCreate>-->
+<!--                                <createOptions>-->
+<!--                                    <driver>virtualbox</driver>-->
+<!--                                    <virtualbox-cpu-count>2</virtualbox-cpu-count>-->
+<!--                                </createOptions>-->
+<!--                            </machine>-->
+<!--&lt;!&ndash;                            <dockerHost>tcp://192.168.99.100:2376</dockerHost>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <certPath>/tmp/build/e55deab7/certs</certPath>&ndash;&gt;-->
+                            <verbose>true</verbose>
                             <images>
                                 <image>
                                     <alias>mysql-db</alias>
@@ -172,7 +175,7 @@
                                         </network>
                                         <wait>
                                             <http>
-                                                <url>http://192.168.99.100:8888/api/health</url>
+                                                <url>http://localhost:8888/api/health</url>
                                                 <status>200</status>
                                             </http>
                                             <time>30000</time>
