--- a/ci/tasks/run-tests.yml
+++ b/ci/tasks/run-tests.yml
@@ -3,18 +3,11 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: amidos/dcind
-    tag: 2.0
+    repository: dockerdozens/maven-dind-alpine
+    tag: latest
 
 inputs:
   - name: university-resource
 
 run:
-  path: bash
-  args:
-    - -exc
-    - |
-      source /docker-lib.sh
-      start_docker
-
-      docker run hello-world
+  path: university-resource/ci/scripts/run-tests.sh
