added an executable run.sh reference

--- a/ci/tasks/publish.yml
+++ b/ci/tasks/publish.yml
@@ -12,6 +12,6 @@ inputs:
 #outputs:
 #  - name: built-university-resource
 #
-#run:
-#  path: university-resource/ci/scripts/publish-image.sh
+run:
+  path: university-resource/ci/scripts/publish-image.sh
 
