--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,5 @@
 ---
 applications:
-  - name: university-app
+  - name: university-students
+    buildpacks:
+      https://github.com/cloudfoundry/java-buildpack.git
