--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,4 @@
 ---
 applications:
   - name: university-students
-    path: target/university-students-0.0.1-SNAPSHOT.jar
-    buildpacks: https://github.com/cloudfoundry/java-buildpack.git
+    buildpack: https://github.com/cloudfoundry/java-buildpack.git
