--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,5 @@
 ---
 applications:
   - name: university-students
+    path: target/university-students-0.0.1-SNAPSHOT.jar
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
