made significant changes to deploy to production

--- a/ci/tasks/deploy-to-prod.yml
+++ b/ci/tasks/deploy-to-prod.yml
@@ -10,7 +10,7 @@ inputs:
   - name: university-resource
 
 outputs:
-  - name: artefact-deploy
+  - name: artifacts
 
 run:
   path: university-resource/ci/scripts/deploy-to-prod.sh
