fixed deployment to prod

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -58,7 +58,4 @@ jobs:
       - put: resource-deploy-backend-app
         params:
           manifest: university-resource/manifest.yml
-
-
-
-
+          path: artifacts/*.jar
