--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.modelmapper</groupId>
