--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -132,7 +140,6 @@
                         <version>0.27.2</version>
                         <configuration>
                             <autoCreateCustomNetworks>true</autoCreateCustomNetworks>
-<!--                            <dockerHost>unix://var/run/docker.sock</dockerHost>-->
                             <images>
                                 <image>
                                     <alias>mysql-db</alias>
