--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -3,4 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
