--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/university_db?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=test
-spring.datasource.password=test
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Gives us access to the H2 database web console
+spring.h2.console.enabled=true
+# Generates the database *only* if it's not there yet
+spring.jpa.hibernate.ddl-auto=update
